--- a/src/style.scss
+++ b/src/style.scss
@@ -9,3 +9,162 @@ $font_family: 'Josefin Sans', sans-serif;
    margin: 0;
    padding: 0;
 }
+html, body{
+   height: 100%;
+   font-family: $font_family;
+   font-size: $font_size;
+}
+.layout{
+   display: flex;
+   flex-direction: column;
+   background: 
+            url(../images/bg-pattern-desktop.svg),
+            url(../images/hero-desktop.jpg),
+            linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+   background-position:left, right, left ;
+   background-repeat: no-repeat;
+   background-size: 60% 100%,
+   40% 100%,
+   100% 100%;
+   
+   main{
+      width: 90%;
+      margin: 0 auto;
+      flex: 8 0 auto;
+      display: flex;
+      .text_block{
+         padding-left: 4rem;
+         width: 40vw;
+         flex: 1 1 auto;
+         .logo {
+            margin-top: 50px;
+            width: 100%;
+            height: 100px;
+            background: url(../images/logo.svg);
+            background-repeat: no-repeat;
+         }
+         h1{
+            padding-top: 100px;
+            text-transform: uppercase;
+            color: $primary_desaturated;
+            font-size: 4rem;
+            font-weight: 300;
+            letter-spacing: 1.5rem;
+            span{
+               color: $neutral;
+               font-weight: 600;
+            }
+         }
+         p{
+            padding-top: 30px;
+            width: 85%;
+            color: $primary_desaturated;
+            line-height: 28px;
+         }
+         .subscribe{
+            width: 80%;
+            margin-top: 30px;
+            border: 0.5px solid hsl(0, 39%, 85%);
+            border-right: none;
+            border-radius: 35px;
+            margin-bottom: 10px;
+            #email{
+               padding-left: 2em;
+               width: 60%;
+               height: 60px;
+               border: none;
+               background: transparent;
+               font-family: $font_family;
+               font-size: $font_size;
+               outline: none;
+            }
+            #email::placeholder{
+               color: $primary_desaturated;
+               font-family: $font_family;
+               font-size: $font_size;
+               opacity: 0.5;
+            }
+            #icon_error{
+               visibility: hidden;
+               position: absolute;
+               padding-top: 17px;
+            }
+            #btn{
+               z-index: 99;
+               width: 7em;
+               float: right;
+               height: 60px;
+               background: url(../images/icon-arrow.svg),
+                           linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
+               background-repeat: no-repeat;
+               background-position: center;
+               border: 1px solid hsl(0, 39%, 85%);
+               border-radius: 35px;
+               outline: none;
+            }
+            #btn:hover{
+               cursor: pointer;
+            }
+            #btn:active{
+               transform: scale(0.9);
+            }
+         }
+         #error_message{
+            visibility: hidden;
+            padding-left: 2em;
+            color: $primary_soft;
+         }
+      }
+      .photo_block{
+         width: 50vw;
+         height: 100vh;
+         flex: 1 8 auto;
+      }
+   }
+   footer{
+      flex: 1 0 auto;
+   }
+}
+
+@media(max-width: 375px) {
+   .layout{
+      background: 
+            url(../images/hero-desktop.jpg),
+            url(../images/bg-pattern-desktop.svg),
+            linear-gradient(135deg, hsl(0, 0%, 100%), hsl(0, 100%, 98%));
+   background-position: 0 100px, center ;
+   background-repeat: no-repeat;
+   background-size: 100% 30%,
+   100% 70%,
+   100% 100%;
+   main {
+      width: 100%;
+      .text_block{
+         width: 100%;
+         padding: 0;
+         text-align: center;
+         .logo{
+            margin-top: 30px;
+         }
+         h1{
+            font-size: 2rem;
+            padding-top: 250px;
+         }
+         p{
+            margin: 0 auto;
+         }
+      }
+      .photo_block{
+         visibility: hidden;
+         width: 0;
+      }
+      .subscribe{
+         width: 90%;
+         margin: 0 auto;
+         #email{
+            width: unset !important;
+         }
+      }
+   }
+   }
+}
